HEXO upload the NodeJS

--- a/docs/reading/1_心理学/社会认知.md
+++ b/docs/reading/1_心理学/社会认知.md
@@ -32,3 +32,5 @@
 - 虚假新闻经常是由机器人最先发布，然后艾特一些有影响力的人，当这些人相信后，虚假新闻便开始传播。例如，一些机器人会艾特特朗普的推特账号，然后转发一些虚假新闻。当特朗普相信后，他会转发给其他人，导致更多人误认为这是真实的。
 - 数字营销中广告回报的数字通常被高估了 3-10 倍。
 - 2% 的网站访问好在第一次访问时下单，需要通过其他方式，比如信息流广告让这些用户回归。
+
+## 炒作机器是什么
